tests/fixtures/invalid/static_assertion_failure.c
int main(void) {
    _Static_assert(0, "zero is false");
    return 0;
}
